--- a/ToCefSharp/App.xaml
+++ b/ToCefSharp/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CefSharp"
+             xmlns:binding="clr-namespace:CefSharp.Binding"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <binding:TitleConverter x:Key="TitleConverter"/>
     </Application.Resources>
 </Application>
